# ui4

./: .gitignore  Cargo.toml  README.md  TODO  workspace.code-workspace
.github/workflows/: rust.yml
assets/: simple.ui.kdl
examples/: readme_example.rs  simple.rs  todomvc.rs  widgets.rs
src/: animation.rs  asset.rs  button.rs  childable.rs  ctx.rs  dom.rs  input.rs  insertable.rs  lens.rs  lib.rs  observer.rs  plugin.rs  runtime.rs  textbox.rs  widgets.rs
src/childable/: mod.rs  tracked.rs
src/childable/tracked/: map.rs  vec.rs
src/dom/: layout.rs  mod.rs  render.rs
src/dom/render/: text.rs
src/observer/: component.rs  has_component.rs  mod.rs  opt_component.rs  res.rs  single.rs
src/tutorial/: mod.rs
src/widgets/: button.rs  draggable.rs  mod.rs  slider.rs  textbox.rs
ui4-macros/: Cargo.toml
ui4-macros/src/: lib.rs
