[package]
name = "ui4"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A reactive vdom-free ui library for the bevy game engine"
repository = "https://github.com/TheRawMeatball/ui4"
keywords = ["ui", "bevy"]

[features]
default = []
nightly = []

[dependencies]
ui4-macros = { path = "./ui4-macros", version = "0.1.0" }

# used for parallel collection of updatefunc
dashmap = "5"
ahash = "0.7"

# tracked vec
crossbeam-channel = "0.5.1"

# layout
morphorm = "0.3" # core layout algorithm
derive_more = "0.99.16" # used for Deref impls on layout elements, and in examples
concat-idents = "1.1.3" # used in generating impls

# various optimizations
smallvec = "1"

# mapping mutex
parking_lot = "0.11.2"

bevy = { version = "0.6", default-features = false, features = ["render"] }

bevy-inspector-egui = { version = "0.7", default-features = false }
